1998-11-28  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/infofile.h: declare FORCE_BUMP and FORCE_NO_BUMP
	as command.
	* server-src/amadmin.c (force_one,unforce_one,info_one): work
	with info.command with bit operator.
	* server-src/planner.c (setup_estimate): work with info.command 
	with bit operator, support for FORCE_BUMP and FORCE_NO_BUMP command.

1998-11-27  Thomas Hepper    <th@icem.de>

	* changer-src/scsi-aix.c Some changes in the error handling in
	scsi command execution
	* changer-src/scsi-changer-driver.c More debug prints.
	removed Endian16/Endian24 (replaced with macros)
	* changer-src/scsi-chio.c make get_clean_state work on linux
	* changer-src/scsi-defs.h  added macros for converting from/to
	SCSI CDB MSB type
	* docs/TAPE.CHANGERS add note about AIX and chg-scsi

1998-11-26  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c(export_one): export the last_level and
	consecutive_runs field.
	* server-src/amadmin.c(import_one): import the last_level and
	consecutive_runs field.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amlabel.c: insist on being run as the dump user (ala
	amlabel) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amadmin.c: fix minor message format problem.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amlabel.c: insist on being run as the dump user (ala
	amflush) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amrmtape.sh.in: insist on being run as the dump user (ala
	amdump) to keep permissions straight.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amadmin.c: issue a warning for update commands that might
	leave ownership incorrect.

1998-11-24  John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c: add a "-t" option to disable tape tests in the
	server checks.  This lets server checks be done without mounting a